--- a/src/app/widget/countrycard/countrycard.component.html
+++ b/src/app/widget/countrycard/countrycard.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!country; then nocountry; else showcountry"></ng-container>
 <ng-template #nocountry></ng-template>
 <ng-template #showcountry let country="country">
-  <div class="country_card_wrapper">
+  <div class="country_card_wrapper" (click)="clickCard(country.iso2)">
     <p>COUNTRY: {{ country.name }}</p>
     <p>ISO: {{ country.iso2 }}</p>
   </div>
