--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
       <a
         routerLink="countryhome"
         routerLinkActive="active-link"
-        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLinkActiveOptions]="{ exact: false }"
       >
         COUNTRIES
       </a>
@@ -17,7 +17,7 @@
       <a
         routerLink="statehome"
         routerLinkActive="active-link"
-        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLinkActiveOptions]="{ exact: false }"
       >
         STATES
       </a>
