--- a/src/app/component/individualcard/individualcard.component.html
+++ b/src/app/component/individualcard/individualcard.component.html
@@ -8,7 +8,7 @@
     <p>COUNTRY: {{ country.name }}</p>
     <p>CURRENCY: {{ country.currency }}</p>
     <p>CAPITAL: {{ country.capital }}</p>
-    <p>PHONECODE: {{ country.phonecode }}</p>
+    <p>PHONE-CODE: {{ country.phonecode }}</p>
     <p>FLAG: {{ country.emoji }}</p>
     <p>ISO: {{ country.iso2 }}</p>
   </div>
