--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,47 +6,51 @@
     height: 100vw;
 }
 
-.lds-facebook {
-    display: inline-block;
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    transform: translate(46%, 50%);
+.hiderouteroutlet {
+    display: none;
 }
 
-.lds-facebook div {
+.lds-ring {
     display: inline-block;
     position: absolute;
-    left: 8px;
-    width: 16px;
-    background: #fff;
-    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    background-color: #01010176;
 }
 
-.lds-facebook div:nth-child(1) {
-    left: 8px;
-    animation-delay: -0.24s;
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+    right: 2rem;
 }
 
-.lds-facebook div:nth-child(2) {
-    left: 32px;
-    animation-delay: -0.12s;
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
 }
 
-.lds-facebook div:nth-child(3) {
-    left: 56px;
-    animation-delay: 0;
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
 }
 
-@keyframes lds-facebook {
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
     0% {
-        top: 8px;
-        height: 64px;
+        transform: rotate(0deg);
     }
 
-    50%,
     100% {
-        top: 24px;
-        height: 32px;
+        transform: rotate(360deg);
     }
 }
