--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="lds-facebook" *ngIf="showLoader">
+<router-outlet></router-outlet>
+<div class="lds-ring" *ngIf="showLoader">
+  <div></div>
   <div></div>
   <div></div>
   <div></div>
 </div>
-<router-outlet></router-outlet>
