--- a/src/app/component/individualcard/individualcard.component.html
+++ b/src/app/component/individualcard/individualcard.component.html
@@ -1,4 +1,4 @@
-<h1>INDIVIDUAL CARD</h1>
+<h1>COUNTRY</h1>
 <ng-container *ngIf="!country; then nocountry; else showcountry"></ng-container>
 <ng-template #nocountry>
   <div>NO COUNTRY</div>
