--- a/src/app/widget/citybycountrycard/citybycountrycard.component.css
+++ b/src/app/widget/citybycountrycard/citybycountrycard.component.css
@@ -1,12 +1,12 @@
-.country_card_wrapper {
+.city_card_wrapper {
     box-shadow: 0px 1px 2px 0px #888888;
     padding: 1rem;
     width: 19.4rem;
+    height: 3.5rem;
     margin: 0.2rem;
     border-radius: 2px;
     background-color: white;
     border: 5px solid black;
-    height: 100% !important;
 }
 
 p {
@@ -15,6 +15,11 @@ p {
     overflow: hidden;
 }
 
-.wrapper {
-    display: flex;
+.state_card_wrapper:hover {
+    transform: scale(1.1);
+    z-index: 99;
+    background-color: #888888;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
 }
