--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
-<div class="lds-ring" *ngIf="showLoader">
+<!-- <div class="lds-ring" *ngIf="showLoader">
   <div></div>
   <div></div>
   <div></div>
   <div></div>
-</div>
+</div> -->
